# openandroidinstaller

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  org.openandroidinstaller.OpenAndroidInstaller.json  org.openandroidinstaller.OpenAndroidInstaller.yml  pyproject.toml  requirements.txt
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  device-support-request.md  device-support-request.yaml
.github/workflow/: pyinstaller-build.yaml
.github/workflows/: build-release.yml  manual-build-macos.yml  manual-build-ubuntu.yml  manual-build-windows.yml  manual-build.yml
doc/: How_to_contribute_your_own_installation_configurations.md  building_the_application_for_your_platform.md  how_to_contribute_your_own_installation_configurations.md  unlocking_the_bootloader.md
docs/: LOGBOOK.md  building_the_application_for_your_platform.md  how_to_contribute_your_own_installation_configurations.md  lineageos-goggle-pixel3a.md  lineageos-samsung-galaxy-A3.md  lineageos-sony-xperia-z.md  unlocking_the_bootloader.md
flatpak/: generated-poetry-sources.json  org.openandroidinstaller.OpenAndroidInstaller.appdata.xml  org.openandroidinstaller.OpenAndroidInstaller.desktop
locales/: base.pot
locales/en/LC_MESSAGES/: base.mo  base.po
locales/fr/LC_MESSAGES/: base.mo  base.po
openandroidinstaller/: app_state.py  installer_config.py  openandroidinstaller.py  openandroidinstaller_old.py  styles.py  tool_utils.py  tooling.py  translations.py  utils.py  views.py  widgets.py
openandroidinstaller/assets/: helper.txt
openandroidinstaller/assets/configs/: A0001.yaml  FP2.yaml  FP3.yaml  FP4.yaml  Fairphone 2.yaml  Mi439.yaml  OnePlusN200TMO.yaml  Pixel 3a.yaml  Samsung Galaxy A3 2017.yaml  Samsung Galaxy A5 2016.yaml  Sony Xperia Z.yaml  Xperia Z.yaml  a3y17lte.yaml  a5xelte.yaml  a5y17lte.yaml  a72q.yaml  a7xelte.yaml  a7y17lte.yaml  addison.yaml  akari.yaml  akatsuki.yaml  ali.yaml  alioth.yaml  apollo.yaml  aurora.yaml  avicii.yaml  bacon.yaml  barbet.yaml  begonia.yaml  beyond0lte.yaml  beyond1lte.yaml  beyond2lte.yaml  billie.yaml  bluejay.yaml  blueline.yaml  bonito.yaml  cedric.yaml  cheeseburger.yaml  chime.yaml  coral.yaml  (+82 more)
openandroidinstaller/assets/configs/removed/: beyond0lte.yaml  beyond1lte.yaml  beyond2lte.yaml
openandroidinstaller/views/: __init__.py  addon_view.py  base.py  install_addons_view.py  install_view.py  requirements_view.py  select_view.py  start_view.py  step_view.py  success_view.py  welcome_view.py
scripts/: build.py  check-image-for-device.py  check-install.py  download-tools.py  flatpak-poetry-generator.py  generate-python-requirements.py  lineageos-on-galaxy-a3.py  lineageos-on-pixel3a.py  lineageos-on-sony-xperia-z.py  utils.py
tests/: conftest.py  test_app.py  test_configs.py  test_progress_bar.py  test_terminal_box.py  test_tool_utils.py  test_tooling.py
