[tool.poetry]
name = "openandroidinstaller"
version = "0.1.0"
description = "Install lineage OS in a nice and easy way."
authors = ["Tobias Sterbak <hello@openandroidinstaller.org>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "<3.11,>=3.8"
click = "^8.1.3"
flet = "^0.1.56"
black = "^22.8.0"
ruff = "^0.0.25"
pyinstaller = "^5.3"
Pillow = "^9.2.0"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
