[tool.poetry]
name = "openandroidinstaller"
version = "0.4.4-beta"
description = "Install lineage OS in a nice and easy way."
authors = ["Tobias Sterbak <hello@openandroidinstaller.org>"]
license = "GPLv3"
readme = "README.md"
homepage = "https://openandroidinstaller.org"
include = ["openandroidinstaller/bin/*", "openandroidinstaller/bin/*/*"]

[tool.poetry.dependencies]
python = "<3.11,>=3.9"
click = "^8.1.3"
flet = "^0.7.4"
black = "^22.8.0"
ruff = "^0.0.25"
pyinstaller = "^5.3"
Pillow = "^9.2.0"
PyYAML = "^6.0"
isort = "^5.10.1"
loguru = "^0.6.0"
requests = "^2.28.1"
pytest = "^7.1.3"
regex = "^2022.9.13"
schema = "^0.7.5"
py7zr = "^0.20.0"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"
bandit = "^1.7.4"
pytest-subprocess = "^1.5.0"
mypy = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88

# Never enforce `E501`. line length
exclude = ["E501"]
